--- a/KTX/KTX/bin/KTX.dll.config
+++ b/KTX/KTX/bin/KTX.dll.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DBKTX" connectionString="Data Source=desktop-kdodq4l;Initial Catalog=QLKTX;Integrated Security=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="DBKTX" connectionString="Data Source=MTPMUSICAL\MUSICAL;Initial Catalog=QLKTX;Integrated Security=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
