--- a/KTX/KTX/KTX.csproj
+++ b/KTX/KTX/KTX.csproj
@@ -157,6 +157,7 @@
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Common\Constants.cs" />
     <Compile Include="Controllers\BaseController.cs" />
+    <Compile Include="Controllers\HoaDonController.cs" />
     <Compile Include="Controllers\LoginController.cs" />
     <Compile Include="Controllers\PhongController.cs" />
     <Compile Include="Controllers\QLPSVController.cs" />
@@ -166,6 +167,8 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="HoaDonViewModel\HoaDonViewModel.cs" />
+    <Compile Include="Models\HoaDonModel.cs" />
     <Compile Include="Models\LoginModel.cs" />
     <Compile Include="Models\PhongModel.cs" />
     <Compile Include="Models\QLPSVModel.cs" />
@@ -1206,6 +1209,9 @@
     <Content Include="Views\QLPSV\Index.cshtml" />
     <Content Include="Views\QLPSV\Create.cshtml" />
     <Content Include="Views\QLPSV\Edit.cshtml" />
+    <Content Include="Views\HoaDon\Create.cshtml" />
+    <Content Include="Views\HoaDon\Index.cshtml" />
+    <Content Include="Views\HoaDon\Edit.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
